[package]
name = "tree-sitter-chordpro"
description = "This grammar supports the mark-up for the ChordPro file format."
version = "0.1.0"
authors = ["Jeff Odell <jeff@odellmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "chordpro"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/odelljl/tree-sitter-chordpro.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.4"
